[package]
name = "cenv-cli"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/wuliao97/cenv-cli.git"


[[bin]]
name = "cenv-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
