[package]
name = "cenv-cli"
version = "0.1.0"
edition = "2021"
description = "This is a CLI-tool for generating a C/C++ project"
readme = "readme.md"
repository = "https://github.com/wuliao97/cenv-cli.git"
license = "LICENSE"

[[bin]]
name = "cenv-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
